# ChangeLog for dev-perl/Mail-Sendmail
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-Sendmail/ChangeLog,v 1.27 2012/06/24 12:58:51 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Mail-Sendmail-0.79.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> Mail-Sendmail-0.790.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*Mail-Sendmail-0.790.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +Mail-Sendmail-0.790.0.ebuild:
  Change version scheme

  21 Jan 2010; Torsten Veller <tove@gentoo.org> Mail-Sendmail-0.79.ebuild:
  Ebuild maintenance. EAPI=2. mips -> ~mips

  07 Dec 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add perl herd

  29 May 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Carlos Silva (r3pek) from metadata.xml (as per #80351).

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Mail-Sendmail-0.79.ebuild:
  Adding perl dep; fixed DEPEND

  21 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Mail-Sendmail-0.79.ebuild:
  Stable on hppa

  22 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  Mail-Sendmail-0.79.ebuild:
  ~hppa blessing

  09 Feb 2006; Joshua Kinard <kumba@gentoo.org> Mail-Sendmail-0.79.ebuild:
  Marked stable on mips for Bug #118389.

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> Mail-Sendmail-0.79.ebuild:
  Mark 0.79 stable on ia64

  15 Jan 2006; Simon Stelling <blubb@gentoo.org> Mail-Sendmail-0.79.ebuild:
  stable on amd64

  13 Jan 2006; John N. Laliberte <allanonjl@gentoo.org> ChangeLog:
  stable on x86

  09 Jan 2006; Fernando J. Pereda <ferdy@gentoo.org>
  Mail-Sendmail-0.79.ebuild:
  Stable on alpha wrt bug #118389
