@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-Sendmail/Mail-Sendmail-0.790.0.ebuild,v 1.2 2011/09/03 21:05:24 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-Sendmail/Mail-Sendmail-0.790.0.ebuild,v 1.3 2013/04/29 15:56:58 ulm Exp $
 
 EAPI=4
 
@@ -10,7 +10,7 @@ inherit perl-module
 
 DESCRIPTION="Simple platform independent mailer"
 
+LICENSE="Mail-Sendmail"
 SLOT="0"
-LICENSE="as-is"
 KEYWORDS="alpha amd64 hppa ia64 ~mips ppc ppc64 sparc x86"
 IUSE=""
