@@ -1,4 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Mail-Sendmail-0.79.tar.gz 16245 SHA256 8a5eb39d3b9a3a4219c6d6051328c62bd51e9b53723ee5b42cd66e8672e681b9 SHA512 5a39efa2f059e97b8da2d3e5f08fc30f7ac990dc7fe4f8df9580314e11c111884942335ab64af5dc4082d3a807381a8db281122237471888ecb92da6ee874e85 WHIRLPOOL 0f4ae23d70d070332347c84a726250caf63e5a7711f297c457d16b503b29920a50d9b3fe80336a363430b215c006a5e6241e4551c221d7331ec246def8f4d445
-EBUILD Mail-Sendmail-0.790.0.ebuild 446 SHA256 c7636e50094028975924ed3e4af21d6fb2c99f8528a8ea8c96d16a324a28472b SHA512 f7c06a4306f591759b2eb7effb7c762d568a02a045069e67fd067f0037f90d1beb7bb2c979337ff854f7d4caa4433a56a79b37d4f639c2a6a272f1d9acbc5bce WHIRLPOOL 814cce8c0e537c935d6f05432ca994b132f40326ccc6e36e3d627c5dbcfcdabc49c6b757af212985aa6ac9eb20e9c53de2ff4216d126a7f840d495d65cbe8843
-MISC ChangeLog 3055 SHA256 a236b267d32b34122a9769c721b3e9c1d91dd911516e7ace8bed2edca40b6235 SHA512 990ca1a006d866e6341ace6a21368b0de2500c9648ae5d6431d8d06e530481e0782d9974749815e1accaf7db4d990c201f9d96e8ce0ec43853f0c3302bda7788 WHIRLPOOL c2e486f747e8c7c74d573bc9b625eb1cad3ffdd5bc2f374feca44deef8fa116b72a18b5deed3dfaeb3b5024c25c2f94e3f60a0ce537756de6b519e6ae6d18b42
+EBUILD Mail-Sendmail-0.790.0.ebuild 453 SHA256 ac5372ffd3ea63fe84d27161b389fa031fdb16a8a10aa7380650962d9915a728 SHA512 0edfa1b991eb048f4e73016b208ba594eefddbab4a93ab1161bb3a3779ac759e04c5ddcff125a3c74c7eb3ac19f08ecb47bfab6dafac36b818a7042bc2b0d5b9 WHIRLPOOL f040d395f10c94f05cee76d1ef2c03d778542c30642ccf46786e96f0604745b32f807345ed810920bdcbafacee9c7d024901cf67fac83e475911444eed558e78
+MISC ChangeLog 3159 SHA256 efb1780f0827dfb52870ce444c566d61d69b6e81e9b9ef402aaf9cee4091e79a SHA512 179c6325d15926fe2959e04109fed53863677313192e190c58164215a10d0ff21306a1098e5a8c02618954f3b7fcc82dfabe045891680e0ff4cfacf1e2af35e8 WHIRLPOOL 050b290c658e58cd07a49a5e9f9dd8c41489119c2d572b1bd69f6f88849e559d90e018f1191fe30c6336255de64d79ac12a08a2b2f5be58da68dd3dc65c12e2e
 MISC metadata.xml 300 SHA256 fe5e8fb2ac5a32dda0c4ad10891be47438606584d1c7ff908adb6ba31f2d54e2 SHA512 685fad295aeec70ad876c8c0c55053c4e6cde90d31750f9b693001196b3570af0fde46538fa94803fd77a938a0739b1d913c9b1fed870ef7ed3323ff47493e77 WHIRLPOOL bc4870c75870358edadf48a6c9563d8c1bcc10433e2f948f54b0c775a3e3695517c5ad05b945e5e1506fd57acb767ab119ae26092a8d4e45c15bab5edda95fa0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQGcBAEBCAAGBQJRfpihAAoJEJQzkH1pP7W4txQL/1DsyKch+oUG/f44wOUQa+Ut
+jsf6INCeOaI7DMxCjZ6tQbVu3NMQ8CBd/WD/owQfHfKbpCRg1zkQJC9bnwxcgpqN
+BVci5jGMxAus5jHH4bPMgG6lMtl/wbaXJKvqCS1kBbQuqZtrnT7REaVv4W7me3eR
+D8Odxg+i2ajjaUrP4lZxpYDSLM29Ou694rvfFGUpXoU2U5vSjRnNHamDf8vV32aJ
+pIHTDk5bZMUrLwuZxVj5k3h5sWtUXSmj8Y4xaAh5feMLYN4lUtezBnwtAVVTGjbR
+W+vwsI2VrpRw6GXzN1xthWUWDFF3R7pJTITwzARof8qdidDAReK7B7WmqfaPQMqe
+aIGklO0bq2H6NByno8jaQPj2Yy9cqYdPsEHIgLH5jzUEMiMU/cU2Vvkx+Ed7J+lM
+lMYGoel81XI7BKN01WBaR8d+TtJWVczi07XtChEtxyc9gLcRZ91TWNRC9h83PIrO
+vjd9ORiJ0XohhV5LgfB6dcxli1YQ6doR/GOLNvmbvw==
+=ZHAn
+-----END PGP SIGNATURE-----
